--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
 body{
   margin: 0;
   padding: 0;
@@ -170,6 +169,7 @@ nav ul li:hover{
 .slider-container-tabs__content .box{
   position: relative;
   width: 100%;
+  max-width: 100%;
   height: 68vh;
   display: flex;
   justify-content: center;
@@ -319,6 +319,7 @@ nav ul li:hover{
 }
 .fast_call {
   width: 100%;
+  max-width: 100%;
   height: 17vh;
   background: #202c45;
   color: #fff;
@@ -362,6 +363,7 @@ nav ul li:hover{
 }
 .why-choose-us{
   width: 100%;
+  max-width: 100%;
   height: auto;
 
   font-weight: 300;
@@ -445,6 +447,7 @@ nav ul li:hover{
 }
 .vehicles-serviced__left{
   width: 50%;
+  max-width: 50%;
   height: 65vh;
   background-image: url("../img/index/photo/car_in_sto.webp");
   background-position: center center;
@@ -455,6 +458,7 @@ nav ul li:hover{
 }
 .vehicles-serviced__right{
   width: 50%;
+  max-width: 50%;
   height: 65vh;
   float: right;
   background: #ffffff;
@@ -466,10 +470,12 @@ nav ul li:hover{
 
   .vehicles-serviced__left{
     width: 100%;
+    max-width: 100%;
     float: top;
   }
   .vehicles-serviced__right{
     width: 100%;
+    max-width: 100%;
     float: top;
     justify-content: center;
   }
@@ -513,8 +519,7 @@ nav ul li:hover{
     -moz-column-count: 2; /* Firefox */
     -webkit-column-count:2; /* Safari and Chrome */
     column-count: 2;
-    margin: 0 auto;
-    padding: 0;
+
     max-width: 300px;
   }
   .company-overview,
@@ -545,6 +550,7 @@ nav ul li:hover{
 
 .auto-repair-services{
   width: 100%;
+  max-width: 100%;
   height: auto;
 
   text-align: center;
@@ -564,8 +570,20 @@ nav ul li:hover{
 }
 .auto-repair-services div{
   display: inline-block;
+  max-width: 100%;
+  margin: 10px 0 10px 0;
+
 }
 @media screen and (max-width: 420px) {
+  .auto-repair-services div{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    text-align: center;
+  }
+  .auto-repair-services a{
+    text-decoration: none;
+  }
   .card{
     width: 300px;
   }
@@ -582,12 +600,13 @@ nav ul li:hover{
 
 .cards {
   max-width: 960px;
+  width: auto;
   text-align: center;
 }
 .card {
   background: #ffffff;
   display: inline-block;
-  margin: 8px;
+
   max-width: 400px;
 
   position: relative;
@@ -614,6 +633,7 @@ nav ul li:hover{
   background: #202c45;
   text-align: justify;
   width: 400px;
+
   min-height: 60px;
   height: auto;
 }
@@ -643,6 +663,7 @@ nav ul li:hover{
 
 .company-overview{
   width: 100%;
+  max-width: 100%;
   min-height: 60vh;
   height: auto;
 
@@ -688,6 +709,7 @@ nav ul li:hover{
   height: 140px;
   color: #646262;
 }
+
 .company-overview-container .company-overview-container__first-box h3{
   text-align: left;
 }
@@ -731,6 +753,7 @@ footer{
   font-family: 'Poppins', sans-serif;
 }
 .container{
+
   max-width: 1170px;
   margin:auto;
 }
@@ -783,7 +806,7 @@ ul{
   color: #f2184f;
   padding-left: 8px;
 }
-.footer-col .social-links a{
+.social-links a{
   display: inline-block;
   height: 40px;
   width: 40px;
@@ -803,6 +826,7 @@ ul{
 @media(max-width: 767px){
   .footer-col{
     width: 50%;
+    max-width: 50%;
     margin-bottom: 30px;
   }
   .row{
@@ -812,11 +836,8 @@ ul{
 @media(max-width: 574px){
   .footer-col{
     width: 100%;
+    max-width: 100%;
   }
 }
 
 
-/*Адаптивный WebSite*/
-@media screen and(max-width: 1200px) {
-
-}
