--- a/css/main.css
+++ b/css/main.css
@@ -713,6 +713,10 @@ nav ul li:hover{
 .company-overview-container .company-overview-container__first-box h3{
   text-align: left;
 }
+.company-overview-container .company-overview-container__first-box h3 a{
+  text-decoration: none;
+  color: #646262;
+}
 
 .company-overview-container .company-overview-container__first-box ion-icon{
   float: left;
