--- a/css/services/repair_alternator.css
+++ b/css/services/repair_alternator.css
@@ -204,6 +204,11 @@ nav ul li:hover{
   font-weight: 600;
   position: relative;
 }
+@media screen and (max-width: 568px) {
+  .main-content__title h2{
+    font-size: 1.5em;
+  }
+}
 .main-content__title h2::before{
   content: '';
   position: absolute;
